--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
-fetch("health_data.csv")
-  .then(response => response.text())
-  .then(data => {
-    const rows = data.split("\n").slice(1);
-    const table = document.getElementById("healthTable");
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Elderly Health Monitoring Dashboard</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background: white;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background: #0077b6;
+      color: white;
+    }
+    .low { color: green; font-weight: bold; }
+    .medium { color: orange; font-weight: bold; }
+    .high { color: red; font-weight: bold; }
+  </style>
+</head>
 
-    let heartRates = [];
+<body>
 
-    rows.forEach(row => {
-      const cols = row.split(",");
-      if (cols.length < 7) return;
+<h1>🧓 Elderly Health Monitoring Dashboard (65+)</h1>
 
-      const name = cols[0];
-      const age = cols[1];
-      const heart = parseInt(cols[2]);
-      const sys = cols[3];
-      const dia = cols[4];
-      const oxygen = cols[5];
-      const sugar = cols[6];
+<h2>📊 Overall Health Analytics</h2>
+<canvas id="overallChart"></canvas>
 
-      heartRates.push(heart);
+<h2>👤 Individual Health Records</h2>
+<table id="healthTable">
+  <tr>
+    <th>Name</th>
+    <th>Age</th>
+    <th>Heart Rate</th>
+    <th>Blood Pressure</th>
+    <th>Oxygen</th>
+    <th>Sugar</th>
+    <th>Risk</th>
+  </tr>
+</table>
 
-      let risk = "Low";
-      if (oxygen < 94 || sugar > 180 || heart > 90) {
-        risk = "High";
-      } else if (sugar > 140 || heart > 80) {
-        risk = "Medium";
-      }
+<script src="script.js"></script>
 
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${name}</td>
-        <td>${age}</td>
-        <td>${heart}</td>
-        <td>${sys}/${dia}</td>
-        <td>${oxygen}%</td>
-        <td>${sugar}</td>
-        <td>${risk}</td>
-      `;
-      table.appendChild(tr);
-    });
-
-    new Chart(document.getElementById("overallChart"), {
-      type: "bar",
-      data: {
-        labels: ["Heart Rate"],
-        datasets: [{
-          label: "Average Heart Rate",
-          data: [heartRates.reduce((a,b)=>a+b)/heartRates.length]
-        }]
-      }
-    });
-  });
+</body>
+</html>
